unpackaged/main/default/objects/Contact_Subscription__c/fields/Donor__c.field-meta.xml
<CustomField>
    <fullName>Donor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Subscriptions</relationshipLabel>
    <relationshipName>Contact_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>