unpackaged/main/default/objects/Contact_Subscription__c/fields/Must_Receive__c.field-meta.xml
<CustomField>
    <fullName>Must_Receive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Must Receive</label>
    <type>Checkbox</type>
</CustomField>