unpackaged/main/default/objects/Contact_Subscription__c/fields/Subscription_Name__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Name__c</fullName>
    <label>Subscription Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual Report</fullName>
            </value>
            <value>
                <fullName>Osprey Watch</fullName>
            </value>
            <value>
                <fullName>Solutions</fullName>
            </value>
            <value>
                <fullName>Strategic Plan</fullName>
            </value>
            <value>
                <fullName>Oceans - Gulf Newsletter</fullName>
            </value>
            <value>
                <fullName>Oceans - Pacific Newsletter</fullName>
            </value>
            <value>
                <fullName>Oceans - Northeast Newsletter</fullName>
            </value>
            <value>
                <fullName>Oceans - FSC Newsletter</fullName>
            </value>
            <value>
                <fullName>Membership - Special Reports</fullName>
            </value>
            <value>
                <fullName>Membership - Results</fullName>
            </value>
            <value>
                <fullName>EDF Advocacy Network Grasstop List</fullName>
            </value>
            <value>
                <fullName>EDFBIZ - Tom Murray Subscription</fullName>
            </value>
            <value>
                <fullName>EDFBIZ - SCSC Webinar Invitations</fullName>
            </value>
            <value>
                <fullName>Summer of Action Contacts – Past Recipients</fullName>
            </value>
            <value>
                <fullName>Summer of Action Contacts – Current Year</fullName>
            </value>
            <value>
                <fullName>Summer of Action Advocates Network</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>