unpackaged/main/default/objects/Contact_Subscription__c/validationRules/Must_Receive.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Receive</fullName>
    <active>true</active>
    <description>If Must Receive is checked, End Date cannot be selected, and do not allow Subscribe to be set to False.</description>
    <errorConditionFormula>OR(
AND( Must_Receive__c = TRUE, NOT(ISBLANK (End_Date__c))),
AND( Must_Receive__c = TRUE, Subscribe__c = FALSE ))</errorConditionFormula>
    <errorMessage>If Must Receive is checked, End Date cannot be selected. Subscribe cannot be set to False.</errorMessage>
</ValidationRule>