unpackaged/main/default/objects/Contact_Subscription__c/validationRules/Opt_Out_Must_Receive.validationRule-meta.xml
<ValidationRule>
    <fullName>Opt_Out_Must_Receive</fullName>
    <active>true</active>
    <description>Must Receive and Opt Out cannot both be set to True</description>
    <errorConditionFormula>AND( Must_Receive__c = TRUE, Opt_Out__c = TRUE)</errorConditionFormula>
    <errorMessage>Must Receive and Opt Out cannot both be set to true.</errorMessage>
</ValidationRule>