unpackaged/main/default/objects/Contact_Subscription__c/validationRules/Subscription_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Subscription_End_Date</fullName>
    <active>true</active>
    <description>If End date is greater than today, do not save</description>
    <errorConditionFormula>IF((End_Date__c &gt; TODAY()), true, false)</errorConditionFormula>
    <errorMessage>End date cannot be later than today.</errorMessage>
</ValidationRule>